--- a/robo-monad.cabal
+++ b/robo-monad.cabal
@@ -17,7 +17,8 @@ cabal-version:       >=1.10
 
 executable robo-demo
   main-is:             Main.hs
-  build-depends:       base >=4.6 && <4.7
+  other-modules:       Crazy, TestBot
+  build-depends:       base >=4.6 && <4.7, robo-monad
   hs-source-dirs:      demo
   default-language:    Haskell2010
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
@@ -25,14 +26,15 @@ executable robo-demo
 library
   exposed-modules:     Game.Robo,
                        Game.Robo.Maths,
-                       Game.Robo.PidController
+                       Game.Robo.PidController,
+                       Game.Robo.Extra
 
   other-modules:       Game.Robo.Core,
                        Game.Robo.Core.Types,
                        Game.Robo.Core.Bot,
                        Game.Robo.Core.World,
-                       Game.Robo.Core.DrawBot,
-                       Game.Robo.Core.DrawWorld
+                       Game.Robo.Draw.DrawBot,
+                       Game.Robo.Draw.DrawWorld
   build-depends:       base >=4.6 && <4.7,
                        mtl, MonadRandom, random, array,
                        AC-Vector,
