--- a/robo-monad.cabal
+++ b/robo-monad.cabal
@@ -16,7 +16,7 @@ cabal-version:       >=1.10
 
 executable robo-demo
   main-is:             Main.hs
-  other-modules:       TestBot, ExampleBot, Crazy
+  other-modules:       WallHugger, ExampleBot, Crazy
   build-depends:       base >=4.6 && <4.7, robo-monad
   hs-source-dirs:      demo
   default-language:    Haskell2010
