--- a/robo-monad.cabal
+++ b/robo-monad.cabal
@@ -5,7 +5,7 @@ name:                robo-monad
 version:             0.1.0.0
 synopsis:            A DSL and simulation environment for robot battles.
 description:         A DSL and simulation environment for robot battles.
-license:             BSD3
+license:             GPL-3
 license-file:        LICENSE
 author:              Bradley Hardy
 maintainer:          bradleyhardy@live.com
@@ -48,7 +48,7 @@ library
     mtl, MonadRandom, random,
     array, deepseq,
     lens-family, lens-family-th,
-    SDL, SDL-gfx, SDL-ttf
+    SDL, SDL-gfx
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:
