--- a/robo-monad.cabal
+++ b/robo-monad.cabal
@@ -16,7 +16,7 @@ cabal-version:       >=1.10
 
 executable robo-demo
   main-is:             Main.hs
-  other-modules:       WallHugger, ExampleBot, Crazy
+  other-modules:       WallHugger, ExampleBot, ExampleLensed, Crazy
   build-depends:       base >=4.6 && <4.7, robo-monad
   hs-source-dirs:      demo
   default-language:    Haskell2010
@@ -30,7 +30,9 @@ library
   exposed-modules:
     Game.Robo,
     Game.Robo.Maths,
-    Game.Robo.PidController,
+    Game.Robo.Pidable,
+    Game.Robo.PID,
+    Game.Robo.PIDLensed,
     Game.Robo.Extra
 
   other-modules:
