--- a/robo-monad.cabal
+++ b/robo-monad.cabal
@@ -48,11 +48,17 @@ library
     Game.Robo.Render.Bot,
     Game.Robo.Render
   build-depends:
-    base >=4.6 && <5,
-    mtl, MonadRandom, random,
-    array, deepseq,
-    lens-family, lens-family-th,
-    GLUT
+                  GLFW-b
+                , MonadRandom
+                , OpenGL
+                , array
+                , base >=4.6 && <5
+                , deepseq
+                , free
+                , lens-family
+                , lens-family-th
+                , mtl
+                , random
   hs-source-dirs:      src
   default-language:    Haskell2010
   other-extensions:    TemplateHaskell, GeneralizedNewtypeDeriving
