Refactor to use free monads

--- a/robo-monad.cabal
+++ b/robo-monad.cabal
@@ -59,6 +59,7 @@ library
                 , lens-family-th
                 , mtl
                 , random
+                , free
   hs-source-dirs:      src
   default-language:    Haskell2010
   other-extensions:    TemplateHaskell, GeneralizedNewtypeDeriving
