--- a/.stylish-haskell.yaml
+++ b/.stylish-haskell.yaml
@@ -72,6 +72,8 @@ columns: 80
 # needs to be aware of these, so it can parse the file correctly.
 #
 # No language extensions are enabled by default.
-# language_extensions:
-  # - TemplateHaskell
-  # - QuasiQuotes
+language_extensions:
+  - TemplateHaskell
+  - QuasiQuotes
+  - FlexibleContexts
+  - RecordWildCards
