--- a/robo-monad.cabal
+++ b/robo-monad.cabal
@@ -41,6 +41,7 @@ library
     Game.Robo.Core.Lenses,
     Game.Robo.Core.Collision,
     Game.Robo.Core.Rules,
+    Game.Robo.Core.Input,
     Game.Robo.Core,
     Game.Robo.Core.World,
     Game.Robo.Core.Bot,
@@ -50,7 +51,7 @@ library
 
   build-depends: GLFW-b
                , GPipe
-               , GPipe-GLFW >= 1.2
+               , GPipe-GLFW >= 1.3
                , MonadRandom
                , array
                , base >= 4.8 && <5
@@ -65,6 +66,10 @@ library
                , time >= 1.5
                , transformers >= 0.4.2.0 && < 0.5
                , vector
+               , pipes
+               , pipes-group
+               , pipes-concurrency
+               , async
   hs-source-dirs:      src
   default-language:    Haskell2010
   default-extensions:  FlexibleContexts, RecordWildCards
